--- a/src/Ncl _Jan17_14_00.vcxproj
+++ b/src/Ncl _Jan17_14_00.vcxproj
@@ -43,7 +43,8 @@
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</LinkIncremental>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\Debug\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\Debug\</IntDir>
-    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</LinkIncremental>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkIncremental>
+    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\NCL_from_GitHub\NCL_in_VisualStudio\src\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Midl>
@@ -56,8 +57,8 @@
     </Midl>
     <ClCompile>
       <Optimization>MinSpace</Optimization>
-      <AdditionalIncludeDirectories>C:\VoluMillSDK_70\Code\Common\Mesh;C:\VoluMillSDK_70\Code\Common\Geom;C:\VoluMillSDK_70\Code\Common\Exchange;C:\VoluMillSDK_70\Code\Common\License;C:\VoluMillSDK_70\Code\Common\Util;C:\NCL_from_GitHub\NCL_in_VisualStudio\src;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwinc;c:\mworks73\include\amd\winxp64\msoft10;c:\mworks73\include;c:\mworks73\include\li;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwkeys;C:\VoluMillSDK_70\Code\Common;C:\VoluMillSDK_70\Code\VoluMillResources;C:\VoluMillSDK_70\ThirdParty\boost;C:\VoluMillSDK_70\ThirdParty;C:\VoluMillSDK_70\ThirdParty\Loki\include;C:\VoluMillSDK_70\ThirdParty\threadpool\include;C:\VoluMillSDK_70\ThirdParty\boost\boost\detail;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG;WIN64;_WINDOWS;UU_COMP=UU_WIN2K;UU_DOUBLE;UU_IPV;LI_FLOAT_IS_DOUBLE;LI_MACROS;UU_SEGDATA=DOUBLE;UU_DEBUGOFF;WNT;WINVER=0x601;NO_XMLRPC_FUNCTIONS;VOLUMILL_ENGINE_LINKED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\VoluMillSDK_70\Code\Common\Mesh;C:\VoluMillSDK_70\Code\Common\Geom;C:\VoluMillSDK_70\Code\Common\Exchange;C:\VoluMillSDK_70\Code\Common\License;C:\VoluMillSDK_70\Code\Common\Util;C:\NCL_from_GitHub\NCL_in_VisualStudio\src;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwinc;c:\mworks73\include\amd\winxp64\msoft10;c:\mworks73\include;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwkeys;C:\VoluMillSDK_70\Code\Common\x64\Release;C:\VoluMillSDK_70\Code\VoluMillResources;C:\VoluMillSDK_70\ThirdParty\boost;C:\VoluMillSDK_70\ThirdParty;C:\VoluMillSDK_70\ThirdParty\Loki\include;C:\VoluMillSDK_70\ThirdParty\threadpool\include;C:\VoluMillSDK_70\ThirdParty\boost\boost\detail;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>NDEBUG;WIN64;_WINDOWS;UU_COMP=UU_WIN2K;UU_DOUBLE;UU_IPV;LI_FLOAT_IS_DOUBLE;LI_MACROS;UU_SEGDATA=DOUBLE;UU_DEBUGOFF;WNT;WINVER=0x601;BOOST_SERIALIZATION_DYN_LINK;NO_XMLRPC_FUNCTIONS;VOLUMILL_ENGINE_LINKED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeaderOutputFile>.\Release/Ncl.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
@@ -66,15 +67,15 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
       <AdditionalIncludeDirectories>C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib\obj;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\VoluMillSDK_70\Code\Release-DLL-VS2010;C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\x64\release;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib\obj;c:\mworks73\lib\amd\winxp64\msoft10\dod_;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64;C:\VoluMillSDK_70\ThirdParty\openssl\lib\static\x64;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\lib\x64;C:\Program Files (x86)\Intel\Composer XE\compiler\lib\intel64;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Dwmapi.lib;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\x64\Release\ncl_lib_.lib;UxTheme.lib;siapp.lib;spromeps.lib;"C:\VoluMillSDK_70\Code\common\x64\Release\Common.lib";MasterLicense.lib;"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010\VoluMillEngines.lib";libeay32MDd.lib;Iphlpapi.lib;opengl32.lib;glu32.lib;netapi32.lib;mssample.lib;mwappl.lib;mwgouge.lib;mwinit.lib;mwp5axis.lib;mwpick.lib;mwpixel.lib;mwrapid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Dwmapi.lib;ncl_lib_.lib;UxTheme.lib;siapp.lib;spromeps.lib;"C:\VoluMillSDK_70\Code\common\x64\Release\Common.lib";MasterLicense.lib;"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010\VoluMillEngines.lib";libeay32MDd.lib;Iphlpapi.lib;opengl32.lib;glu32.lib;netapi32.lib;mssample.lib;mwappl.lib;mwgouge.lib;mwinit.lib;mwp5axis.lib;mwpick.lib;mwpixel.lib;mwrapid.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/Ncl.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
+      <AdditionalLibraryDirectories>C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib;.\x64\release;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib\obj;c:\mworks73\lib\amd\winxp64\msoft10\dod_;C:\VoluMillSDK_70\Code\Common\x64\Release;C:\VoluMillSDK_70\Code\Release-DLL-VS2010;C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64;C:\VoluMillSDK_70\ThirdParty\openssl\lib\static\x64;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\lib\x64;C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010;C:\Program Files (x86)\Intel\Composer XE\compiler\lib\intel64;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>boost_serialization-vc100-mt-1_55.lib;libc.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <SubSystem>Windows</SubSystem>
     </Link>
@@ -88,7 +89,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Midl>
-      <PreprocessorDefinitions>DEBUG;</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TypeLibraryName>.\Debug/Ncl.tlb</TypeLibraryName>
@@ -97,8 +98,8 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\VoluMillSDK_70\Code\Common\Mesh;C:\VoluMillSDK_70\Code\Common\Geom;C:\VoluMillSDK_70\Code\Common\Exchange;C:\VoluMillSDK_70\Code\Common\License;C:\VoluMillSDK_70\Code\Common\Util;C:\NCL_from_GitHub\NCL_in_VisualStudio\src;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwinc;c:\mworks73\include\amd\winxp64\msoft10;c:\mworks73\include;c:\mworks73\include\li;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwkeys;C:\VoluMillSDK_70\Code\Common;C:\VoluMillSDK_70\Code\VoluMillResources;C:\VoluMillSDK_70\ThirdParty\boost;C:\VoluMillSDK_70\ThirdParty;C:\VoluMillSDK_70\ThirdParty\Loki\include;C:\VoluMillSDK_70\ThirdParty\threadpool\include;C:\VoluMillSDK_70\ThirdParty\boost\boost\detail;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DEBUG;WIN64;_WINDOWS;UU_COMP=UU_WIN2K;UU_DOUBLE;UU_IPV;LI_FLOAT_IS_DOUBLE;LI_MACROS;UU_SEGDATA=DOUBLE;UU_DEBUGOFF;WNT;WINVER=0x601;NO_XMLRPC_FUNCTIONS;VOLUMILL_ENGINE_LINKED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\NCL_from_GitHub\NCL_in_VisualStudio\src;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwinc;c:\mworks73\include\amd\winxp64\msoft10;c:\mworks73\include;C:\NCL_from_GitHub\NCL_in_VisualStudio\postworks\pwkeys;C:\VoluMillSDK_70\Code\Common;C:\VoluMillSDK_70\Code\VoluMillResources;C:\VoluMillSDK_70\ThirdParty\boost;C:\VoluMillSDK_70\ThirdParty;C:\VoluMillSDK_70\ThirdParty\Loki\include;C:\VoluMillSDK_70\ThirdParty\threadpool\include;C:\VoluMillSDK_70\ThirdParty\boost\boost\detail;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_DEBUG;WIN64;_WINDOWS;UU_COMP=UU_WIN2K;UU_DOUBLE;UU_IPV;LI_FLOAT_IS_DOUBLE;LI_MACROS;UU_SEGDATA=DOUBLE;UU_DEBUGOFF;WNT;WINVER=0x601;BOOST_SERIALIZATION_DYN_LINK;NO_XMLRPC_FUNCTIONS;VOLUMILL_ENGINE_LINKED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeaderOutputFile>.\Debug/Ncl.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
@@ -110,16 +111,16 @@
       <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
       <AdditionalIncludeDirectories>C:\NCL_from_GitHub\NCL_in_VisualStudio\src\inc;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\picts;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\VoluMillSDK_70\Code\Release-DLL-VS2010-MDd;C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd;C:\NCL_from_GitHub\NCL_in_VisualStudio\lib;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\x64\debug;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib\obj;c:\mworks73\lib\amd\winxp64\msoft10\ddd_;C:\VoluMillSDK_70\ThirdParty\openssl\lib\static;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\lib\x64;C:\Program Files (x86)\Intel\Composer XE\compiler\lib\intel64;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>C:\NCL_from_GitHub\NCL_in_VisualStudio\src\x64\Debug\ncl_lib_.lib;"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd\MasterLicense.lib";Dwmapi.lib;propsys.lib;shlwapi.lib;comctl32.lib;UxTheme.lib;siapp.lib;spwmath.lib;Gdiplus.lib;spromeps.lib;"C:\VoluMillSDK_70\Code\Common\x64\Release-DLL-MDd\Common.lib";"C:\VoluMillSDK_70\ThirdParty\openssl\lib\static\x64\libeay32MDd.lib";"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd\VoluMillEngines.lib";Iphlpapi.lib;opengl32.lib;glu32.lib;netapi32.lib;sk32w.lib;msmulti.lib;lcslte.lib;lidriver.lib;lidrvbmp.lib;lidrvjpg.lib;lidrvlwi.lib;lidrvpng.lib;lidrvtga.lib;lidrvtif.lib;lidrvwin.lib;ligeom.lib;liinterp.lib;lilicnse.lib;limemman.lib;lishader.lib;lisystem.lib;liview.lib;lixform.lib;mcworks.lib;msp5axis.lib;mspixel.lib;mss5axis.lib;mssample.lib;mwappl.lib;mwbase.lib;mwbrep.lib;mwclash.lib;mwclose.lib;mwfmsim.lib;mwgouge.lib;mwinit.lib;mwp5axis.lib;mwpick.lib;mwpixel.lib;mwprofl.lib;mwr5axis.lib;mwrapid.lib;mwrender.lib;mwrendx.lib;mwrenogl.lib;mws5axis.lib;mwsample.lib;mwsldops.lib;mwsmbase.lib;mwufms.lib;mwutil.lib;mwv5axis.lib;mwvisi.lib;mwvkinem.lib;mwvturn.lib;mwvwire.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Dwmapi.lib;ncl_lib_.lib;propsys.lib;shlwapi.lib;comctl32.lib;UxTheme.lib;siapp.lib;spwmath.lib;Gdiplus.lib;spromeps.lib;"C:\VoluMillSDK_70\Code\common\x64\Release-DLL-MDd\Common.lib";"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd\MasterLicense.lib";"C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd\VoluMillEngines.lib";"libeay32MDd.lib";Iphlpapi.lib;opengl32.lib;glu32.lib;netapi32.lib;sk32w.lib;msmulti.lib;lcslte.lib;lidriver.lib;lidrvbmp.lib;lidrvjpg.lib;lidrvlwi.lib;lidrvpng.lib;lidrvtga.lib;lidrvtif.lib;lidrvwin.lib;ligeom.lib;liinterp.lib;lilicnse.lib;limemman.lib;lishader.lib;lisystem.lib;liview.lib;lixform.lib;mcworks.lib;msp5axis.lib;mspixel.lib;mss5axis.lib;mssample.lib;mwappl.lib;mwbase.lib;mwbrep.lib;mwclash.lib;mwclose.lib;mwfmsim.lib;mwgouge.lib;mwinit.lib;mwp5axis.lib;mwpick.lib;mwpixel.lib;mwprofl.lib;mwr5axis.lib;mwrapid.lib;mwrender.lib;mwrendx.lib;mwrenogl.lib;mws5axis.lib;mwsample.lib;mwsldops.lib;mwsmbase.lib;mwufms.lib;mwutil.lib;mwv5axis.lib;mwvisi.lib;mwvkinem.lib;mwvturn.lib;mwvwire.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/Ncl.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <IgnoreSpecificDefaultLibraries>msvcrt.lib;LIBC.lib;boost_serialization-vc100-mt-gd-1_55.lib;</IgnoreSpecificDefaultLibraries>
+      <AdditionalLibraryDirectories>C:\NCL_from_GitHub\NCL_in_VisualStudio\lib;.\x64\debug;C:\NCL_from_GitHub\NCL_in_VisualStudio\src\picts;C:\NCL_from_GitHub\NCL_in_VisualStudio\nlib\obj;c:\mworks73\lib\amd\winxp64\msoft10\ddd_;C:\VoluMillSDK_70\ThirdParty\openssl\lib\static\x64;C:\Program Files (x86)\3Dconnexion\3DxWare SDK\lib\x64;C:\VoluMillSDK_70\Code\x64\Release-DLL-VS2010-MDd;C:\Program Files (x86)\Intel\Composer XE\compiler\lib\intel64;C:\VoluMillSDK_70\ThirdParty\boost\lib\x64</AdditionalLibraryDirectories>
+      <IgnoreSpecificDefaultLibraries>msvcrt.lib;LIBC.lib;LIBCD.lib;boost_serialization-vc100-mt-gd-1_55.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/Ncl.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
@@ -135,6 +136,13 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <!--
+    <None Include="..\..\ncl100\nlib\objs\nclpic.bmp" />
+    <None Include="..\..\ncl100\nlib\obj\nclpic.bmp" />
+    <None Include="..\..\ncl100\nlib\obj\nclpic_48.bmp" />
+    <None Include="..\..\ncl100\nlib\obj\toolbar.bmp" />
+    <None Include="..\..\ncl100\nlib\obj\toolbar1.bmp" />
+	-->
     <None Include="nlib\obj\nclpic.bmp" />
     <None Include="nlib\obj\nclpic_48.bmp" />
     <None Include="nlib\obj\toolbar.bmp" />
@@ -4031,11 +4039,6 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</CompileAsManaged>
-      <MultiProcessorCompilation Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</MultiProcessorCompilation>
-      <UseUnicodeForAssemblerListing Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</UseUnicodeForAssemblerListing>
-      <IntrinsicFunctions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</IntrinsicFunctions>
-      <FunctionLevelLinking Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</FunctionLevelLinking>
     </ClCompile>
     <ClCompile Include="nclc\nevolve.c">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -6936,7 +6939,6 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="inc\MachineWorks.h" />
     <ClInclude Include="inc\wsntres.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
