--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ src/nclc/nupmill_newOfOct18.c
 src/nclc/nupmill_oldGood.c
 src\Debug\*.obj
 src\Debug\*.sbr
+src\debug\lp.lis
+src\lp.lis
+src\release\lp.lis
